<resources>
    <string name="app_name">User Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="hobbies">Hobbies</string>
    <string name="ssc_percentage">SSC Percentage</string>
    <string name="bca_percentage">BCA Percentage</string>
    <string name="submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reading">Reading</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="education_details">Education details</string>
    <string name="ssc">SSC</string>
    <string name="hsc">HSC</string>
    <string name="bca">BCA</string>
    <string name="bcom">B.COM</string>
    <string name="percentage">Percentage:</string>
    <string name="initialPercentage">0%</string>
    <string name="percentageSymbol">%</string>
    <string name="full_name_Error">Please enter full name</string>
    <string name="phone_error">Please enter phone number</string>
    <string name="invalid_phone_error">Please enter valid phone number</string>
    <string name="email_error">Please enter email</string>
    <string name="invalid_email_error">Please enter valid email</string>
    <string name="address_error">Please enter address</string>
    <string name="please">Please</string>
    <string name="country_error">enter country</string>
    <string name="select_gender">select gender</string>
    <string name="hobby_Error">select at least one hobby</string>
    <string name="ssc_percentage_Error">enter SSC/HSC percentage</string>
    <string name="bca_percentage_Error">enter BCA/B.COM percentage</string>
    <string name="success">Profile added successfully</string>

    <string-array name="county_list">
        <item>United States</item>
        <item>Canada</item>
        <item>India</item>
        <item>United Kingdom</item>
        <item>Australia</item>
    </string-array>
</resources>