<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16">

            <TextView
                android:id="@+id/personalDetailsLabel"
                android:text="@string/personal_details"
                android:textSize="@dimen/text_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/dimen_16"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fullNameLayout"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/personalDetailsLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/dimen_16">
                <android.support.design.widget.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/edtFullName"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/text_16"
                    android:drawableStart="@drawable/profile_user" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneNumberLayout"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fullNameLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/dimen_16">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textSize="@dimen/text_16" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/dimen_16">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/text_16" />
            </android.support.design.widget.TextInputLayout>

            <AutoCompleteTextView
                android:id="@+id/countryAutoCompleteView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_weight="1"
                android:drawableStart="@drawable/baseline_location_city_24"
                android:hint="@string/country"
                android:singleLine="true"
                android:nextFocusDown="@id/edtAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailLayout" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressLayout"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/countryAutoCompleteView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/dimen_16">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_location_on_24"
                    android:hint="@string/address"
                    android:textSize="@dimen/text_16" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/dobCalendarLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/addressLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:gravity="center"
                app:layout_constraintRight_toRightOf="parent">
                <DatePicker
                    android:id="@+id/dobDatepicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/genderLabel"
                android:text="@string/gender"
                android:textSize="@dimen/text_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/dobCalendarLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/dimen_16"/>

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/genderLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rbFemale"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <TextView
                android:id="@+id/hobbiesLabel"
                android:text="@string/hobbies"
                android:textSize="@dimen/text_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupGender"
                android:layout_marginTop="@dimen/dimen_16"/>

            <LinearLayout
                android:id="@+id/hobbiesLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/hobbiesLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/dimen_8">

                <CheckBox
                    android:id="@+id/readingCheckbox"
                    android:text="@string/reading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/musicCheckbox"
                    android:text="@string/music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/sportsCheckbox"
                    android:text="@string/sports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <TextView
                android:id="@+id/educationalDetailsLabel"
                android:text="@string/education_details"
                android:textSize="@dimen/text_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/hobbiesLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/dimen_16"/>

            <Spinner
                android:id="@+id/spinnerSSC"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/educationalDetailsLabel"
                android:drawableStart="@drawable/ic_school" />

            <SeekBar
                android:id="@+id/seekbarSSC"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerSSC" />

            <LinearLayout
                android:id="@+id/sscPercentageLabelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/seekbarSSC"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/dimen_6"
                >
                <TextView
                    android:id="@+id/sscPercentageLabel"
                    android:text="@string/percentage"
                    android:textSize="@dimen/text_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/sscPercentageValue"
                    android:text="@string/initialPercentage"
                    android:textSize="@dimen/text_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerBCA"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sscPercentageLabelLayout"
                android:drawableStart="@drawable/ic_university" />

            <SeekBar
                android:id="@+id/seekbarBCA"
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerBCA" />

            <LinearLayout
                android:id="@+id/bcaPercentageLabelLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/seekbarBCA"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/dimen_6"
                >
                <TextView
                    android:id="@+id/bcaPercentageLabel"
                    android:text="@string/percentage"
                    android:textSize="@dimen/text_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/bcaPercentageValue"
                    android:text="@string/initialPercentage"
                    android:textSize="@dimen/text_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                android:text="@string/submit"
                android:onClick="onClickSubmit"
                app:layout_constraintTop_toBottomOf="@+id/bcaPercentageLabelLayout"
                android:layout_marginTop="@dimen/dimen_20"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>